test/cases/compile_errors/global_variable_initializer_must_be_constant_expression.zig
extern fn foo() i32;
const x = foo();
export fn entry() i32 {
    return x;
}

// error
// backend=stage2
// target=native
//
// :2:14: error: comptime call of extern function
